--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
-    "lodash.debounce": "^4.0.8",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "react-query": "^3.39.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
