--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
+    "puppeteer": "^22.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
