--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^126.0.0",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
     "puppeteer": "^22.13.1",
+    "puppeteer-core": "^22.13.1",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^10.0.0",
