--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sparticuz/chromium": "^126.0.0",
     "@tanstack/react-query": "^5.51.1",
+    "aws-sdk": "^2.1663.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
