--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "aws-sdk": "^2.1663.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
+    "libreoffice-convert": "^1.6.0",
     "next": "14.2.5",
     "puppeteer": "^22.13.1",
     "puppeteer-core": "^22.13.1",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
